tests/NormalTests/paczka1/small_fuzzy/80046241.err
Error in line 6: nABvXIn89C A823 16,2
Error in line 8: SHfbofLb6tG A119 92,4
Error in line 10: z1XrKOAtm A119 135,5
Error in line 7: nABvXIn89C A995 44,6
